MockEmailService com Logger. Padrões Strategy e Template Method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
+
+default.sender=cristianoandre96@gmail.com
+default.recipient=cristianoandre96@gmail.com
