--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=cristianoandre96@gmail.com
 default.recipient=cristianoandre96@gmail.com
+
+jwt.secret=OmagicoDeOzPulandoCorda
+jwt.expiration=60000
