Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=cristianoandre96@gmail.com
 default.recipient=cristianoandre96@gmail.com
 
 jwt.secret=OmagicoDeOzPulandoCorda
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=cris-curso-spring
+s3.region=sa-east-1
